<resources>
    <string name="app_name">NavigationB</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="fragment_1_0" translatable="false">Fragment 1.0</string>
    <string name="fragment_1_1" translatable="false">Fragment 1.1</string>
    <string name="fragment_2_0" translatable="false">Fragment 2.0</string>
    <string name="fragment_2_1" translatable="false">Fragment 2.1</string>
    <string name="fragment_3_0" translatable="false">Fragment 3.0</string>
    <string name="final_fragment">Final Fragment</string>
    <string name="home" translatable="false">Home</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="tv_go_to_home">Go to Home</string>
    <string name="final_fragment_image">Final Fragment !</string>
    <string name="navigate_to_fragment">Navigate to fragment</string>
    <string name="fragment_1_0_image">Fragment 1.0 image</string>
    <string name="fragment_2_0_image">Fragment 2.0 image</string>
    <string name="fragment_1_1_images">Fragment 1.1 images</string>
    <string name="turorial_2" translatable="false">Turorial 2</string>
    <string name="next">Next</string>
    <string name="tutorial_1" translatable="false">Tutorial 1</string>
    <string name="fragment_2_1_image">Fragment 2.1 image</string>
    <string name="finish">Finish</string>
    <string name="tutorial_3" translatable="false">Tutorial 3</string>
    <string name="go_to_final_fragment">Go to Final Fragment</string>
    <string name="fragment3_stick" translatable="false">stickman3</string>
</resources>